force-app/main/default/objects/IIT__c/IIT__c.object-meta.xml
<CustomObject>
    <label>IIT</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IIT Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>