force-app/main/default/objects/IIT__c/fields/ATR_CancellationComments__c.field-meta.xml
<CustomField>
    <fullName>ATR_CancellationComments__c</fullName>
    <label>ATR_CancellationComments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>