force-app/main/default/objects/IIT__c/fields/ATR_CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>ATR_CancellationReason__c</fullName>
    <label>ATR_CancellationReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>