force-app/main/default/objects/IIT__c/fields/ATR_Consult__c.field-meta.xml
<CustomField>
    <fullName>ATR_Consult__c</fullName>
    <label>ATR_Consult</label>
    <length>255</length>
    <type>Text</type>
</CustomField>