force-app/main/default/objects/IIT__c/fields/ATR_Receiver__c.field-meta.xml
<CustomField>
    <fullName>ATR_Receiver__c</fullName>
    <label>ATR_Receiver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>