force-app/main/default/objects/IIT__c/fields/ATR_ReceiverInfoBUREAU__c.field-meta.xml
<CustomField>
    <fullName>ATR_ReceiverInfoBUREAU__c</fullName>
    <label>ATR_ReceiverInfoBUREAU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>