force-app/main/default/objects/IIT__c/fields/ATR_ReceiverInfoDIVISION__c.field-meta.xml
<CustomField>
    <fullName>ATR_ReceiverInfoDIVISION__c</fullName>
    <label>ATR_ReceiverInfoDIVISION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>