force-app/main/default/objects/IIT__c/fields/ATR_ReceiverInfoPhone__c.field-meta.xml
<CustomField>
    <fullName>ATR_ReceiverInfoPhone__c</fullName>
    <label>ATR_ReceiverInfoPhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>