force-app/main/default/objects/IIT__c/fields/ATR_SolutionDirector__c.field-meta.xml
<CustomField>
    <fullName>ATR_SolutionDirector__c</fullName>
    <label>ATR_SolutionDirector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>