force-app/main/default/objects/IIT__c/fields/CSLMR_Consult__c.field-meta.xml
<CustomField>
    <fullName>CSLMR_Consult__c</fullName>
    <label>CSLMR_Consult</label>
    <length>255</length>
    <type>Text</type>
</CustomField>