force-app/main/default/objects/IIT__c/fields/CSLMR_DivisionApprover__c.field-meta.xml
<CustomField>
    <fullName>CSLMR_DivisionApprover__c</fullName>
    <label>CSLMR_DivisionApprover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>