force-app/main/default/objects/IIT__c/fields/CSLMR_IsIndividual__c.field-meta.xml
<CustomField>
    <fullName>CSLMR_IsIndividual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSLMR_IsIndividual</label>
    <type>Checkbox</type>
</CustomField>