force-app/main/default/objects/IIT__c/fields/CSLMR_LicenseCountAgainst__c.field-meta.xml
<CustomField>
    <fullName>CSLMR_LicenseCountAgainst__c</fullName>
    <label>CSLMR_LicenseCountAgainst</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>