force-app/main/default/objects/IIT__c/fields/CSLMR_OrganizationProductID__c.field-meta.xml
<CustomField>
    <fullName>CSLMR_OrganizationProductID__c</fullName>
    <label>CSLMR_OrganizationProductID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>