force-app/main/default/objects/IIT__c/fields/CSLMR_ProductLicenseID__c.field-meta.xml
<CustomField>
    <fullName>CSLMR_ProductLicenseID__c</fullName>
    <label>CSLMR_ProductLicenseID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>