force-app/main/default/objects/IIT__c/fields/CSLMR_WorkStation__c.field-meta.xml
<CustomField>
    <fullName>CSLMR_WorkStation__c</fullName>
    <label>CSLMR_WorkStation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>