force-app/main/default/objects/IIT__c/fields/DSR_Applicant__c.field-meta.xml
<CustomField>
    <fullName>DSR_Applicant__c</fullName>
    <label>DSR_Applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>