force-app/main/default/objects/IIT__c/fields/DSR_ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>DSR_ApplicationName__c</fullName>
    <label>DSR_ApplicationName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>