force-app/main/default/objects/IIT__c/fields/DSR_Consult__c.field-meta.xml
<CustomField>
    <fullName>DSR_Consult__c</fullName>
    <label>DSR_Consult</label>
    <length>255</length>
    <type>Text</type>
</CustomField>