force-app/main/default/objects/IIT__c/fields/DSR_CurrentProcessDesc__c.field-meta.xml
<CustomField>
    <fullName>DSR_CurrentProcessDesc__c</fullName>
    <label>DSR_CurrentProcessDesc</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>