force-app/main/default/objects/IIT__c/fields/DSR_DC__c.field-meta.xml
<CustomField>
    <fullName>DSR_DC__c</fullName>
    <label>DSR_DC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>