force-app/main/default/objects/IIT__c/fields/DSR_DCO__c.field-meta.xml
<CustomField>
    <fullName>DSR_DCO__c</fullName>
    <label>DSR_DCO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>