force-app/main/default/objects/IIT__c/fields/DSR_DocumentsCount__c.field-meta.xml
<CustomField>
    <fullName>DSR_DocumentsCount__c</fullName>
    <label>DSR_DocumentsCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>