force-app/main/default/objects/IIT__c/fields/DSR_DSRDescription__c.field-meta.xml
<CustomField>
    <fullName>DSR_DSRDescription__c</fullName>
    <label>DSR_DSRDescription</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>