force-app/main/default/objects/IIT__c/fields/DSR_ExternalSigneesCount__c.field-meta.xml
<CustomField>
    <fullName>DSR_ExternalSigneesCount__c</fullName>
    <label>DSR_ExternalSigneesCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>