force-app/main/default/objects/IIT__c/fields/DSR_IsSameAsSubmitter__c.field-meta.xml
<CustomField>
    <fullName>DSR_IsSameAsSubmitter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DSR_IsSameAsSubmitter</label>
    <type>Checkbox</type>
</CustomField>