force-app/main/default/objects/IIT__c/fields/DSR_SigneesCount__c.field-meta.xml
<CustomField>
    <fullName>DSR_SigneesCount__c</fullName>
    <label>DSR_SigneesCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>