force-app/main/default/objects/IIT__c/fields/DSR_SolutionDirector__c.field-meta.xml
<CustomField>
    <fullName>DSR_SolutionDirector__c</fullName>
    <label>DSR_SolutionDirector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>