force-app/main/default/objects/IIT__c/fields/DSR_TransactionVolume__c.field-meta.xml
<CustomField>
    <fullName>DSR_TransactionVolume__c</fullName>
    <label>DSR_TransactionVolume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>