force-app/main/default/objects/IIT__c/fields/ITPIR_AppDevACUser__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_AppDevACUser__c</fullName>
    <label>ITPIR_AppDevACUser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>