force-app/main/default/objects/IIT__c/fields/ITPIR_AttachmentDisplay__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_AttachmentDisplay__c</fullName>
    <label>ITPIR_AttachmentDisplay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>