force-app/main/default/objects/IIT__c/fields/ITPIR_Audience__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_Audience__c</fullName>
    <label>ITPIR_Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>