force-app/main/default/objects/IIT__c/fields/ITPIR_Comments__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_Comments__c</fullName>
    <label>ITPIR_Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>