force-app/main/default/objects/IIT__c/fields/ITPIR_CompetingApps__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_CompetingApps__c</fullName>
    <label>ITPIR_CompetingApps</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>