force-app/main/default/objects/IIT__c/fields/ITPIR_DivisionalApprover__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_DivisionalApprover__c</fullName>
    <label>ITPIR_DivisionalApprover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>