force-app/main/default/objects/IIT__c/fields/ITPIR_DivisionGroup__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_DivisionGroup__c</fullName>
    <label>ITPIR_DivisionGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>