force-app/main/default/objects/IIT__c/fields/ITPIR_ExpectedDate__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_ExpectedDate__c</fullName>
    <label>ITPIR_ExpectedDate</label>
    <type>Date</type>
</CustomField>