force-app/main/default/objects/IIT__c/fields/ITPIR_FundingMandate__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_FundingMandate__c</fullName>
    <label>ITPIR_FundingMandate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>