force-app/main/default/objects/IIT__c/fields/ITPIR_FundingSource__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_FundingSource__c</fullName>
    <label>ITPIR_FundingSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>