force-app/main/default/objects/IIT__c/fields/ITPIR_FundsAvailable__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_FundsAvailable__c</fullName>
    <label>ITPIR_FundsAvailable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>