force-app/main/default/objects/IIT__c/fields/ITPIR_IsReadyToUpload__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_IsReadyToUpload__c</fullName>
    <label>ITPIR_IsReadyToUpload</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>