force-app/main/default/objects/IIT__c/fields/ITPIR_ProjectDesc__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_ProjectDesc__c</fullName>
    <label>ITPIR_ProjectDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>