force-app/main/default/objects/IIT__c/fields/ITPIR_ProjectManagerUser__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_ProjectManagerUser__c</fullName>
    <label>ITPIR_ProjectManagerUser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>