force-app/main/default/objects/IIT__c/fields/ITPIR_ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_ProjectName__c</fullName>
    <label>ITPIR_ProjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>