force-app/main/default/objects/IIT__c/fields/ITPIR_ProjectPriority__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_ProjectPriority__c</fullName>
    <label>ITPIR_ProjectPriority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>