force-app/main/default/objects/IIT__c/fields/ITPIR_ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_ProjectType__c</fullName>
    <label>ITPIR_ProjectType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile Application</fullName>
            </value>
            <value>
                <fullName>Standard Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>