force-app/main/default/objects/IIT__c/fields/ITPIR_ReviewType__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_ReviewType__c</fullName>
    <label>ITPIR_ReviewType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>