force-app/main/default/objects/IIT__c/fields/ITPIR_ServiceOffered__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_ServiceOffered__c</fullName>
    <label>ITPIR_ServiceOffered</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>