force-app/main/default/objects/IIT__c/fields/ITPIR_SolutionDirectorUser__c.field-meta.xml
<CustomField>
    <fullName>ITPIR_SolutionDirectorUser__c</fullName>
    <label>ITPIR_SolutionDirectorUser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>