force-app/main/default/objects/IIT__c/fields/ITPT_AccountableSeniorLeader_User__c.field-meta.xml
<CustomField>
    <fullName>ITPT_AccountableSeniorLeader_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ITPT_AccountableSeniorLeader_User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IIT_Records2</relationshipName>
    <type>Lookup</type>
</CustomField>