force-app/main/default/objects/IIT__c/fields/ITPT_AIDR_ID__c.field-meta.xml
<CustomField>
    <fullName>ITPT_AIDR_ID__c</fullName>
    <label>ITPT_AIDR_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>