force-app/main/default/objects/IIT__c/fields/ITPT_BusinessSponsor__c.field-meta.xml
<CustomField>
    <fullName>ITPT_BusinessSponsor__c</fullName>
    <label>ITPT_BusinessSponsor</label>
    <length>200</length>
    <type>Text</type>
</CustomField>