force-app/main/default/objects/IIT__c/fields/ITPT_ExistsInITPIR__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ExistsInITPIR__c</fullName>
    <label>ITPT_ExistsInITPIR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>