force-app/main/default/objects/IIT__c/fields/ITPT_ITPIR__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ITPIR__c</fullName>
    <label>ITPT_ITPIR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>