force-app/main/default/objects/IIT__c/fields/ITPT_ManagementVisibility__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ManagementVisibility__c</fullName>
    <label>ITPT_ManagementVisibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ITPT_Risk</valueSetName>
    </valueSet>
</CustomField>