force-app/main/default/objects/IIT__c/fields/ITPT_Notes__c.field-meta.xml
<CustomField>
    <fullName>ITPT_Notes__c</fullName>
    <label>ITPT_Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>