force-app/main/default/objects/IIT__c/fields/ITPT_Overall_RAG__c.field-meta.xml
<CustomField>
    <fullName>ITPT_Overall_RAG__c</fullName>
    <label>ITPT Overall RAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>🟥 1 - High</fullName>
            </value>
            <value>
                <fullName>🟨 2- Medium</fullName>
            </value>
            <value>
                <fullName>🟦 3 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>