force-app/main/default/objects/IIT__c/fields/ITPT_Project__c.field-meta.xml
<CustomField>
    <fullName>ITPT_Project__c</fullName>
    <label>ITPT_Project</label>
    <length>200</length>
    <type>Text</type>
</CustomField>