force-app/main/default/objects/IIT__c/fields/ITPT_ProjectDescription__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ProjectDescription__c</fullName>
    <label>ITPT_ProjectDescription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>