force-app/main/default/objects/IIT__c/fields/ITPT_ProjectDivision__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ProjectDivision__c</fullName>
    <label>ITPT_ProjectDivision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>