force-app/main/default/objects/IIT__c/fields/ITPT_ProjectLead__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ProjectLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ITPT_ProjectLead</label>
    <referenceTo>Employee</referenceTo>
    <relationshipLabel>ITPT_ProjectLead</relationshipLabel>
    <relationshipName>ITPT_ProjectLead</relationshipName>
    <type>Lookup</type>
</CustomField>