force-app/main/default/objects/IIT__c/fields/ITPT_ProjectLead_User__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ProjectLead_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ITPT_ProjectLead_User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IIT_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>