force-app/main/default/objects/IIT__c/fields/ITPT_ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ProjectName__c</fullName>
    <label>ITPT_ProjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>