force-app/main/default/objects/IIT__c/fields/ITPT_ProjectSystemName_System__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ProjectSystemName_System__c</fullName>
    <label>ITPT_ProjectSystemName_System</label>
    <length>200</length>
    <type>Text</type>
</CustomField>