force-app/main/default/objects/IIT__c/fields/ITPT_ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ProjectType__c</fullName>
    <label>ITPT_ProjectType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Process Improvement Project</fullName>
            </value>
            <value>
                <fullName>System Project</fullName>
            </value>
            <value>
                <fullName>Program Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>