force-app/main/default/objects/IIT__c/fields/ITPT_ResponsibleDirector_User__c.field-meta.xml
<CustomField>
    <fullName>ITPT_ResponsibleDirector_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ITPT_ResponsibleDirector_User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IIT_Records</relationshipName>
    <type>Lookup</type>
</CustomField>