force-app/main/default/objects/IIT__c/fields/ITPT_RiskScore__c.field-meta.xml
<CustomField>
    <fullName>ITPT_RiskScore__c</fullName>
    <label>ITPT_RiskScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>