force-app/main/default/objects/IIT__c/fields/ITPT_SDLC_Phase__c.field-meta.xml
<CustomField>
    <fullName>ITPT_SDLC_Phase__c</fullName>
    <label>ITPT SDLC Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>