force-app/main/default/objects/IIT__c/fields/ITPT_SR_ProjectStatusReport__c.field-meta.xml
<CustomField>
    <fullName>ITPT_SR_ProjectStatusReport__c</fullName>
    <label>ITPT_SR_ProjectStatusReport</label>
    <length>255</length>
    <type>Text</type>
</CustomField>