force-app/main/default/objects/IIT__c/fields/ITPT_SystemProjectCode__c.field-meta.xml
<CustomField>
    <fullName>ITPT_SystemProjectCode__c</fullName>
    <label>ITPT_SystemProjectCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>