force-app/main/default/objects/IIT__c/fields/ITPT_VendorName__c.field-meta.xml
<CustomField>
    <fullName>ITPT_VendorName__c</fullName>
    <label>ITPT_VendorName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>