force-app/main/default/objects/IIT__c/fields/ITPT_VendorRisk__c.field-meta.xml
<CustomField>
    <fullName>ITPT_VendorRisk__c</fullName>
    <label>ITPT_VendorRisk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ITPT_Risk</valueSetName>
    </valueSet>
</CustomField>