force-app/main/default/objects/IIT__c/fields/ITPTSR_Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_Accomplishments__c</fullName>
    <label>ITPTSR_Accomplishments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>