force-app/main/default/objects/IIT__c/fields/ITPTSR_CommunicationNotes__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_CommunicationNotes__c</fullName>
    <label>ITPTSR_CommunicationNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>