force-app/main/default/objects/IIT__c/fields/ITPTSR_ContractNotes__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_ContractNotes__c</fullName>
    <label>ITPTSR_ContractNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>