force-app/main/default/objects/IIT__c/fields/ITPTSR_ContractRAG__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_ContractRAG__c</fullName>
    <label>ITPTSR_ContractRAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>🔴 1 - Red</fullName>
            </value>
            <value>
                <fullName>🟡 2 - Amber</fullName>
            </value>
            <value>
                <fullName>🟢 3 - Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>