force-app/main/default/objects/IIT__c/fields/ITPTSR_CostNotes__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_CostNotes__c</fullName>
    <label>ITPTSR_CostNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>