force-app/main/default/objects/IIT__c/fields/ITPTSR_CurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_CurrentStatus__c</fullName>
    <label>ITPTSR_CurrentStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved - Not Started</fullName>
                <default>true</default>
                <label>Approved - Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>