force-app/main/default/objects/IIT__c/fields/ITPTSR_FundingNotes__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_FundingNotes__c</fullName>
    <label>ITPTSR_FundingNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>