force-app/main/default/objects/IIT__c/fields/ITPTSR_KeyIssues__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_KeyIssues__c</fullName>
    <label>ITPTSR_KeyIssues</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>