force-app/main/default/objects/IIT__c/fields/ITPTSR_LinktoProjectSchedule__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_LinktoProjectSchedule__c</fullName>
    <label>ITPTSR_LinktoProjectSchedule</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>