force-app/main/default/objects/IIT__c/fields/ITPTSR_PlannedTasks__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_PlannedTasks__c</fullName>
    <label>ITPTSR_PlannedTasks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>