force-app/main/default/objects/IIT__c/fields/ITPTSR_QualityNotes__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_QualityNotes__c</fullName>
    <label>ITPTSR_QualityNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>