force-app/main/default/objects/IIT__c/fields/ITPTSR_RiskNotes__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_RiskNotes__c</fullName>
    <label>ITPTSR_RiskNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>