force-app/main/default/objects/IIT__c/fields/ITPTSR_ScopeNotes__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_ScopeNotes__c</fullName>
    <label>ITPTSR_ScopeNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>