force-app/main/default/objects/IIT__c/fields/ITPTSR_StaffingNotes__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_StaffingNotes__c</fullName>
    <label>ITPTSR_StaffingNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>