force-app/main/default/objects/IIT__c/fields/ITPTSR_SummaryNotes__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_SummaryNotes__c</fullName>
    <label>ITPTSR_SummaryNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>