force-app/main/default/objects/IIT__c/fields/ITPTSR_TechnicalNotes__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_TechnicalNotes__c</fullName>
    <label>ITPTSR_TechnicalNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>