force-app/main/default/objects/IIT__c/fields/ITPTSR_TimelineNotes__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_TimelineNotes__c</fullName>
    <label>ITPTSR_TimelineNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>