force-app/main/default/objects/IIT__c/fields/ITPTSR_TimelineRAG__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_TimelineRAG__c</fullName>
    <label>ITPTSR_TimelineRAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ITPT_RAG</valueSetName>
    </valueSet>
</CustomField>