force-app/main/default/objects/IIT__c/fields/ITPTSR_UpcomingMilestones__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_UpcomingMilestones__c</fullName>
    <label>ITPTSR_UpcomingMilestones</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>