force-app/main/default/objects/IIT__c/fields/ITPTSR_UpcomingMilestonesDate__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_UpcomingMilestonesDate__c</fullName>
    <label>ITPTSR_UpcomingMilestonesDate</label>
    <type>Date</type>
</CustomField>