force-app/main/default/objects/IIT__c/fields/ITPTSR_VendorNotes__c.field-meta.xml
<CustomField>
    <fullName>ITPTSR_VendorNotes__c</fullName>
    <label>ITPTSR_VendorNotes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>